# my-ai

./: Cargo.toml
.github/workflows/: build.yml
scripts/: deploy.sh  get-llama.sh
